--- a/Infrastructure.ApiClient/Infrastructure.ApiClient.csproj
+++ b/Infrastructure.ApiClient/Infrastructure.ApiClient.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Domain.Entities\Domain.Entities.csproj" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.0" />
   </ItemGroup>
 
 </Project>
