--- a/Translations/Translations.csproj
+++ b/Translations/Translations.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Domain.Entities\Domain.Entities.csproj" />
+    <Folder Include="Shared\" />
+    <Folder Include="Pages\Components\" />
   </ItemGroup>
 
 </Project>
