--- a/Infrastructure.EFCore/Infrastructure.EFCore.csproj
+++ b/Infrastructure.EFCore/Infrastructure.EFCore.csproj
@@ -30,4 +30,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0-rc.1.24451.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Configurations\" />
+  </ItemGroup>
+
 </Project>
