--- a/BlazorServer/appsettings.json
+++ b/BlazorServer/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  
+    "ConnectionStrings": {
+      "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CCMS;Trusted_Connection=true;MultipleActiveResultSets=true"
+    }
+ 
 }
