--- a/Infrastructure.EFCore.Tests/Infrastructure.EFCore.Tests.csproj
+++ b/Infrastructure.EFCore.Tests/Infrastructure.EFCore.Tests.csproj
@@ -9,17 +9,10 @@
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.9" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
-    <PackageReference Include="NSubstitute" Version="5.3.0" />
     <PackageReference Include="xunit" Version="2.9.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Application.Services\Application.Services.csproj" />
-    <ProjectReference Include="..\BlazorServer\BlazorServer.csproj" />
-    <ProjectReference Include="..\Domain.Entities\Domain.Entities.csproj" />
-    <ProjectReference Include="..\Infrastructure.EFCore\Infrastructure.EFCore.csproj" />
   </ItemGroup>
 
   <ItemGroup>
@@ -27,7 +20,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Factories\" />
+    <ProjectReference Include="..\Infrastructure.EFCore\Infrastructure.EFCore.csproj" />
+    <ProjectReference Include="..\Domain.Entities\Domain.Entities.csproj" />
+    <ProjectReference Include="..\Application.Services\Application.Services.csproj" />
   </ItemGroup>
 
 </Project>
