--- a/Infrastructure.EFCore/Infrastructure.EFCore.csproj
+++ b/Infrastructure.EFCore/Infrastructure.EFCore.csproj
@@ -26,12 +26,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0-rc.1.24451.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0-rc.1.24451.1" />
-  </ItemGroup>
-
-  <ItemGroup>
     <Folder Include="Configurations\" />
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
